# ts_mtdome

./: .gitignore  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.cfg  setup.py
.githooks/: pre-commit
.github/workflows/: enforce_rebase.yaml  news_creation.yaml
conda/: meta.yaml
doc/: commands.rst  component_statuses.rst  conf.py  configuration_parameters.rst  documenteer.toml  index.rst  manifest.yaml  power_management.rst  protocols.rst  response_codes.rst  version_history.rst
doc/_static/: mystyle.css
doc/news/: OSW-1042.bugfix.rst  OSW-1042.feature.1.rst  OSW-1042.feature.2.rst  OSW-1042.feature.rst  OSW-1042.perf.1.rst  OSW-1042.perf.rst  OSW-1057.bugfix.rst  OSW-1057.feature.rst  OSW-1058.misc.rst  OSW-1058.perf.rst  OSW-1060.bugfix.rst  OSW-1066.bugfix.rst  OSW-1107.feature.rst  OSW-1207.perf.rst  OSW-1294.bugfix.rst  OSW-1388.feature.1.rst  OSW-1388.feature.rst  OSW-1408.feature.1.rst  OSW-1408.feature.rst  OSW-1491.misc.rst  OSW-1542.misc.rst  (+21 more)
schema/: Dome.yaml  MTDome.yaml  amcs_status.jschema  apscs_status.jschema  command.jschema  dcs.yaml  lwscs_status.jschema
tests/: expected_state.py  mock_controller_test.py  status_assert_util.py  test_amcs.py  test_apscs.py  test_azimuth_motion.py  test_black.py  test_csc.py  test_cscs.py  test_dome_csc.py  test_elevation_motion.py  test_lcs.py  test_lcs_state_machine.py  test_lwscs.py  test_mock_controller.py  test_mtdome_csc.py  test_power_management_handler.py  test_shutter_motion.py  test_slip_ring.py  test_thcs.py  utils_for_tests.py
ups/: ts_Dome.table  ts_mtdome.table
(+153 files in other folders)
