[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
exclude =
  bin,
  doc,
  **/*/__init__.py,
  **/*/version.py,
  tests/.tests

[mypy]
ignore_missing_imports = True
# The following only excludes version.py when running mypy from the command line.
# `--ignore-glob=*version.py` in `[tool:pytest]` excludes the file from pytest,
# because pytest explicitly specifies each file being tested, and that overrides mypy's exclude.
exclude = version\.py

[tool:pytest]
addopts = --flake8 --black --mypy --ignore-glob=*version.py
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503

[metadata]
version = attr: setuptools_scm.get_version
